--- a/.github/workflows/action-test.yml
+++ b/.github/workflows/action-test.yml
@@ -15,10 +15,18 @@ jobs:
   ubuntu:
     runs-on: ubuntu-latest
     steps:
-      - name: Run test action without publish
-        uses: stack-spot/workflow-github-action-publish-content@main
+      - name: Run test action
+        uses: stack-spot/cli-github-action-run-command@main
         with:
           client_id: ${{ secrets.CLIENT_ID }}
           client_key: ${{ secrets.CLIENT_KEY }}
           realm: ${{ secrets.REALM }}
           command_stk: "--version"
+
+      - name: Run test action again
+        uses: stack-spot/cli-github-action-run-command@main
+        with:
+          client_id: ${{ secrets.CLIENT_ID }}
+          client_key: ${{ secrets.CLIENT_KEY }}
+          realm: ${{ secrets.REALM }}
+          command_stk: ""
