--- a/action.yml
+++ b/action.yml
@@ -34,7 +34,7 @@ runs:
         fi
 
     - name: Download STK CLI
-      if: env.STK_INSTALLED == 'true'
+      if: env.STK_INSTALLED == 'false'
       shell: bash
       run: |
         curl \
