--- a/action.yml
+++ b/action.yml
@@ -26,8 +26,7 @@ runs:
       id: check_cli
       shell: bash
       run: |
-        if command -v stk &> /dev/null
-        then
+        if [ -f "$HOME/.stk/bin/stk" ] then
             echo "STK_INSTALLED=true" >> "$GITHUB_ENV"
         else
             echo "STK_INSTALLED=false" >> "$GITHUB_ENV"
@@ -58,9 +57,7 @@ runs:
       id: check_cli2
       shell: bash
       run: |
-        command -v stk
-        if command -v stk &> /dev/null
-        then
+        if [ -f "$HOME/.stk/bin/stk" ] then
             echo "STK_INSTALLED=true" >> "$GITHUB_ENV"
         else
             echo "STK_INSTALLED=false" >> "$GITHUB_ENV"
