fix: unclosed quotes

--- a/action.yml
+++ b/action.yml
@@ -51,7 +51,7 @@ runs:
       run: |
         if [ -f "$HOME/.stk/bin/stk" ]; then
             echo "STK_INSTALLED=true" >> "$GITHUB_ENV"
-            echo "PATH=$PATH:$HOME/.stk/bin" >> "$GITHUB_ENV
+            echo "PATH=$PATH:$HOME/.stk/bin" >> "$GITHUB_ENV"
         else
             echo "STK_INSTALLED=false" >> "$GITHUB_ENV"
         fi
